<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Finance House App</string>
    <string name="powered_by">Powered By</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation">Confirmation</string>
    <string name="verify">Verify</string>
    <string name="default_text">Default Text</string>
    <string name="amount_in_aed">AED %1s</string>
    <string name="amount_in_inr">INR %1s</string>
    <string name="plus_sign" translatable="false">+%1s</string>
    <string name="plus_91_sign" translatable="false">+91-%1s</string>
    <string name="plus_971_sign" translatable="false">+971-%1s</string>
    <string name="percentage">%1$s%%</string>
    <string name="processing">Processing</string>
    <string name="invalid_credentials">Invalid Credentials.%1s</string>
    <string name="invalid_type_format">Invalid %1s</string>
    <string name="app_alias" translatable="false">Payday_FH</string>
    <string name="text_intro_1">Your Personal \nDigital Bank</string>
    <string name="text_intro_2">Transfer Money to your \nLoved Ones Instantly</string>
    <string name="text_intro_3"><![CDATA[Pay Your Bills & Get \nCashback]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="how_to_register">How to Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_id">Enter your User ID</string>
    <string name="password">Enter your Password</string>
    <string name="forgot_password">Forgot your Password</string>
    <string name="forgot_user_id_password">Forgot your User ID or Password?</string>
    <string name="card_number">Card number</string>
    <string name="confirm_mobile_no">Confirm your Mobile Number</string>
    <string name="verify_otp">Verify your OTP</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="otp_info">Please enter the  OTP sent to your mobile number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="create_login_details">Create your Login Details</string>
    <string name="password_pattern_info"><![CDATA[Use 8 or more characters with a mix letters, numbers & symbols]]></string>
    <string name="confirm_password">Confirm your Password</string>
    <string name="account_registered">Your Account has been \nRegistered Successfully</string>
    <string name="invalid_username" tools:ignore="ExtraTranslation">Invalid User ID</string>
    <string name="invalid_password">Invalid password</string>
    <string name="scan_card">Scan your card</string>
    <string name="position_card_instruction">Position your card in the frame</string>
    <string-array name="money_transfer_options">
        <item>International\nMoney Transfer</item>
        <item>Payday\nto Payday</item>
        <item>Local\nMoney Transfer</item>
        <item>Payday \nto Credit Card</item>
        <item>Transaction\nHistory</item>
    </string-array>
    <string-array name="languages" translatable="false">
        <item>English</item>
        <item>العربية</item>
        <item>हिंदी</item>
        <item>മലയാളം</item>
        <item>اردو</item>
        <item>বাংলা</item>
        <item>தமிழ்</item>
        <item>Tagalog</item>
    </string-array>
    <string-array name="aadc_languages">
        <item>""</item>
        <item>ENG</item>
    </string-array>
    <string name="card_services">Card Services</string>
    <string name="loan">PayDay Finance</string>
    <string name="loan_services_title">Loan Services</string>
    <string name="early_salary">Early Salary</string>
    <string name="emi">EMI (approx.)</string>
    <string name="card_balance">Card Balance</string>
    <string name="last_salary_credited">Last Salary Credited</string>
    <string name="welcome">Welcome</string>
    <string name="cancel">Cancel</string>
    <string name="choose_language">Choose Language</string>
    <string name="interested">Interested</string>
    <string name="not_interested">Not Interested</string>
    <string-array name="drawer_items">
        
        
        
        
        
        
        <item>Card Details</item>
        
        <item>Service Requests</item>
        
        <item>Contact Us</item>
        <item>Logout</item>
    </string-array>
    <string-array name="card_service_items">
        
        
        <item>Transactions</item>
        
        <item>Salaries Credited</item>
        <item>PIN Change</item>
        <item />
        
    </string-array>
    <string-array name="services">
        <item>International Money\nTransfer</item>
        <item>du</item>
        <item>Etisalat</item>
        <item>PayDay-to-PayDay\nTransfer</item>
        <item>India Bill Payments</item>
    </string-array>
    <string-array name="freq_services">
        <item>Transaction\nHistory</item>
        <item>Payments</item>
        <item>Transfers</item>
        <item>Card Services</item>
        <item>Offers</item>
        <item>Loan Services</item>

    </string-array>
    <string name="apply_for_loan">Apply for PayDay Finance</string>
    <string name="apply_for_loan_topup">Apply for Loan Topup</string>
    <string name="loan_calculator">Loan \nCalculator</string>
    <string name="support">Support</string>
    <string name="title_how_to_fragment">How To Register</string>
    <string name="select_currency">Select Currency</string>
    <string name="card_statement">Card Statement</string>
    <string name="description_date">Description/Date</string>
    <string name="salaries_credited">Salaries Credited</string>
    <string name="salaries_credited_date">Salary Credited Date</string>
    <string name="atm_image">ATM address machines</string>
    <string name="loan_offer_details">Loan Offer Details</string>
    <string name="loan_type">Loan Type</string>
    <string name="loan_number">Loan Number</string>
    <string name="loan_disbursal_date">Loan Disbursal Date</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="original_loan_amount">Loan Amount</string>
    <string name="monthly_installment">Monthly Installment</string>
    <string name="no_installments_paid">Number of installments paid</string>
    <string name="principal_outstanding">Principal Outstanding</string>
    <string name="outstanding_installments">Outstanding installments</string>
    <string name="monthly_installments">Monthly installments</string>
    <string name="terms_and_Conditions">Terms and Conditions</string>
    <string name="accept">Accept</string>
    <string name="loan_offer_terms_cond">I have read and agreed to the terms and conditions</string>
    <string name="agree_terms">I have read and agreed to the &#160;</string>
    <string-array name="edit_beneficiary_options">
        <item>PayDay-to-PayDay</item>
        <item>PayDay to Credit Card</item>
        <item>Local Money Transfer</item>
        <item>PayDay-to-PayDay Loan</item>
        
    </string-array>
    <string-array name="locator_options">
        <item>Branch Locations</item>
        <item>SMS Banking Short Codes</item>
    </string-array>
    <string-array name="contact_us_options">
        <item>Call Center Number</item>
        <item>Website</item>
        <item>Suggestions &amp; Complaints</item>
    </string-array>
    <string-array name="payday_card_key">
        <item>Customer Name</item>
        <item>PayDay Card Number</item>
        <item>Card Type</item>
        <item>Card Status</item>
        <item>Available Balance Amount</item>
        <item>Total Overdraft Limit</item>
        <item>Available Overdraft Limit</item>
        <item>Amount on hold</item>
        <item>Last salary credited</item>
        <item>Last salary credit date</item>
    </string-array>
    <string-array name="account_option">
        <item>PayDay Finance</item>
        <item>Early Salary</item>
        <item>Credit Card</item>
        <item>Executive Finance</item>
    </string-array>
    <string name="conversion_value" translatable="false">%1s %2s = %3s %4s as on 16-10-2018</string>
    <string name="step_by_step_guide">Step by step Guide</string>
    <string name="scan_qr_code">Scan this QR code</string>
    <string name="scan_payday_card">Scan your Payday Card</string>
    <string name="position_payday_card">Scan your Payday Card</string>
    <string name="card_scan_error">Please scan your \ncard again</string>
    <string name="capture_front_emirates_id">Scan front side of your Emirates ID</string>
    <string name="capture_back_emirates_id">Scan back side of your Emirates ID</string>
    <string name="scan_back_emirates_id_note">We will never save or store your Emirates ID. \nYour details will be processed securely.</string>
    <string name="register_card_detail">Enter your Payday Card Details</string>
    <string name="card_holder_name">Card Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="capture">Capture</string>
    <string name="customer_selfie">Capture Selfie</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="operator_image_view">Operator image view</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_mobile_number_payments">Enter Mobile Number</string>
    <string name="calling_card">Calling Card</string>
    <string name="faq">FAQs</string>
    <string name="international_remittance">International Money Transfer</string>
    <string name="accounts">Accounts</string>
    <string name="registered_beneficiaries">Registered Beneficiaries</string>
    <string name="balance">Balance</string>
    <string name="payday_card">payDay_card</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="available_overdraft_limit">Available Overdraft Limit</string>
    <string name="overdraft_limit_2">Overdraft Limit</string>
    <string name="ok">OK</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_atm_pin">Enter your Payday Card PIN</string>
    <string name="enter_atm_pin_salik">Enter your PIN</string>
    <string name="atm_pin">PIN</string>
    <string name="token_id">Token ID</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="loans">Loans</string>
    <string name="eligible_for_loan">You are Eligible for Loan</string>
    <string-array name="mini_statements">
        <item>1 Month Statement</item>
        <item>3 Month Statement</item>
        <item>6 Month Statement</item>
    </string-array>
    <string name="transaction_history">Transaction History</string>
    <string-array name="transaction_history_transfer">
        <item>PayDay-to-PayDay</item>
        <item>Local Money Transfer</item>
        
        <item>Credit Card Transfer</item>
    </string-array>
    <string-array name="transaction_history_option">
        <item>Monthly</item>
        <item>5 Last Transaction</item>
    </string-array>
    <string name="select_country">Select Country</string>
    <string name="select_bank">Select Bank</string>
    <string name="thumb_print_instruction">To make it easier, you can login with the Fingerprint that is already stored in this mobile</string>
    <string name="activate">Activate</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="home">Home</string>
    <string name="branches">Locator</string>
    <string name="i_accept">I accept the&#160;</string>
    <string name="branch_locations">Branch Locations</string>
    <string name="search">Search</string>
    <string name="no_countries_found">No countries found</string>
    <string name="scan">Scan</string>
    <string name="explore">Explore</string>
    <string name="browse">Browse</string>
    <string name="or">OR</string>
</resources>