<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16">

    <ImageView
        android:id="@id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_thumbprint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_thumb_instructions"
        style="@style/AppTheme.Text.Small.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_8"
        android:text="@string/thumb_print_instruction"
        android:textSize="@dimen/text_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view" />

    <CheckBox
        android:id="@+id/check_box"
        style="@style/AppTheme.Text.Body2.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:text="@string/i_accept"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip"
        app:layout_constraintEnd_toStartOf="@+id/tv_terms_condition_link"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_thumb_instructions"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_terms_condition_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_Conditions"
        android:textColor="@color/blue_green"
        app:layout_constraintBottom_toBottomOf="@+id/check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/check_box"
        app:layout_constraintTop_toTopOf="@+id/check_box" />


    <android.support.design.button.MaterialButton
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="@dimen/button_corner"
        app:layout_constraintBottom_toTopOf="@+id/btn_activate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/grey" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_activate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_36"
        android:text="@string/activate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/btn_primary_color"
        app:cornerRadius="@dimen/button_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/btn_secondary_color" />


</android.support.constraint.ConstraintLayout>