<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/btn_gradient"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title"
            style="@style/AppTheme.Text.Body2.Bold"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/select_country"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingStart="@dimen/dimen_16"
            android:paddingLeft="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_40"
            android:paddingRight="@dimen/dimen_40"
            android:textColor="@color/white"
            android:visibility="gone"
            android:gravity="start|center_vertical"
            android:textAlignment="viewStart"
            android:imeOptions="actionDone" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|end"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/dimen_16"
            android:src="@drawable/ic_search"
            android:tint="@color/white" />

    </FrameLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_4"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_24"
        android:paddingBottom="@dimen/dimen_24"
        android:paddingStart="@dimen/dimen_8"
        android:paddingEnd="@dimen/dimen_8"
        android:text="@string/no_countries_found"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>